remove nowrap to ensure no vertical scrolling happens

--- a/webofneeds/won-owner-webapp/src/main/webapp/style/_person-viewer.scss
+++ b/webofneeds/won-owner-webapp/src/main/webapp/style/_person-viewer.scss
@@ -22,8 +22,6 @@ won-person-viewer {
       }
       &__value {
         grid-area: grid-item-value;
-        white-space: nowrap;
-        text-overflow: ellipsis;
       }
     }
   }
